# sap-a2a-mcp-agentic-ai

./: README.md
A2A/: pyproject.toml
A2A/agents/sap/: __init__.py  __main__.py  agent.py  pyproject.toml  task_manager.py
A2A/agents/utils/: __main__.py  agent.py  pyproject.toml  task_manager.py
A2A/common/server/: server.py
