[project]
name = "a2a-agent"
version = "0.1.0"
description = "A2A-compatible Agent using MCP and SAP GenAI Hub"
requires-python = ">=3.12"

dependencies = [
  "ag2[mcp, openai]>=0.8.6",              # A2A framework, MCP client, OpenAI-compatible LLM support
  "generative-ai-hub-sdk[all]>=0.4.0",    # SAP GenAI Hub orchestration + LLM schemas
  "fastapi",                              # Required by A2AServer
  "uvicorn[standard]>=0.27.1",            # Local server runner
  "httpx",                                # HTTP + SSE client
  "click>=8.1.3"                          # For CLI option handling
]

[tool.hatch.build.targets.wheel]
packages = ["common"]

[tool.uv.workspace]
members = [
  "agents/sap",
  "agents/utils"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-mock>=3.14.0",
  "ruff>=0.11.2"
]
